# oru_walk_module

./: .gitmodules  CMakeLists.txt  Doxyfile  INSTALL  LICENSE  Makefile  README  __doxygen_8h.html  __doxygen_8h_source.html  annotated.html  avg__filter_8h.html  avg__filter_8h_source.html  classavgFilter-members.html  classavgFilter.html  classes.html  classoru__walk-members.html  classoru__walk.html  classoruw__log-members.html  classoruw__log.html  classoruw__timer-members.html  classoruw__timer.html  classwalkParameters-members.html  classwalkParameters.html  classwalk__parameters-members.html  classwalk__parameters.html  common.mk  dir_68267d1309a1af8e8297ef4c3efbcdba.html  doxygen.css  files.html  functions.html  functions_func.html  functions_vars.html  globals.html  globals_defs.html  globals_enum.html  globals_eval.html  globals_func.html  globals_vars.html  hierarchy.html  index.html  (+36 more)
src/: _doxygen.h  avg_filter.h  log_debug.cpp  log_debug.h  mpc_walk.cpp  mpc_walk.h  oru_modulemain.cpp  oru_walk.cpp  oru_walk.h  oru_walk_init.cpp  oru_walk_main.cpp  oruw_log.cpp  oruw_log.h  oruw_timer.h  stiffness_position.cpp  walk_parameters.cpp  walk_parameters.h  walk_patterns.cpp  walking.cpp
test/: Makefile  draw_SDL.cpp  init_steps_nao.cpp  plot_feet_com_steps.m  process_logs.m  test_01.cpp  test_02.cpp  test_03.cpp  test_04.cpp  test_05.cpp  test_06.cpp  test_07.cpp  test_08.cpp  test_09.cpp  test_10.cpp  tests_common.cpp
